# webcolors

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  VERSION  make-python.mk  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test.sh  versioning.md  webcolors.code-workspace
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  ENHANCEMENT-REQUEST.yml  bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  pull_request_template_fast_track.md
.github/workflows/: assign-author.yml  cleanup-caches.yml  close-issues-and-mrs.yml  dependabot-auto-merge.yml  dependabot-auto-release.yml  deps-review.yml  gitleaks.yml  lint.yaml  lint.yml  publish.yaml  publish.yml  sync-version-on-tag.yml
scripts/: semver  update_requirements.py
src/: webcolors.py
src/templates/: hello.html.j2
src/webcolors/: __init__.py  _help.py  app.py
src/webcolors/templates/: hello.html.j2
tests/: test_app.py  test_help.py
