[project]
name = "webcolors"
version = "0.1.19"
description = "An example of a containerized Flask app to play with k8s and Docker"
keywords = ["flask", "", "test"]
requires-python = ">=3.10,<4"
readme = "README.md"
# dependencies = ["Flask>=2.0,<3"]
dependencies = ["Flask>=2.2.3,<3"]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "darglint",
    "isort",
    "mypy",
    "pip-audit",
    "pycodestyle",
    "pydantic",
    "pydocstyle",
    "pylint",
    "rope",
    "toml",
    "types-PyYAML",
    "types-requests",
]

[project.urls]
repository = "https://github.com/andreygrechin/webcolors"

[tool.black]
line-length = 100
target_version = ["py310"]
include = '\.pyi?$'
exclude = '((\.eggs|\.git|\.venv)|foo.py)'

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = "pydantic.mypy"
exclude = '\.venv'
show_error_codes = true

[tool.pydocstyle]
convention = "numpy"

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pylint.BASIC]
good-names = ["i", "db"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
